# playtest2-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: testing.yaml
example/env/default/: python.properties
example/specs/: sample.spec
example/step_impl/: execution_hooks.py
src/playtest2/: __about__.py  cli.py  steps.py
src/playtest2/steps/: core.py
tests/: test_cli.py  test_steps.py
tests/steps/: test_core.py
