[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playtest2"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "ftnext", email = "takuyafjp+develop@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["getgauge", "httpx", "jsonpath-ng"]

[project.urls]
Documentation = "https://github.com/ftnext/playtest2#readme"
Issues = "https://github.com/ftnext/playtest2/issues"
Source = "https://github.com/ftnext/playtest2"

[tool.hatch.version]
path = "src/playtest2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/playtest2 tests}"

[tool.coverage.run]
source_pkgs = ["playtest2", "tests"]
branch = true
parallel = true
omit = [
  "src/playtest2/__about__.py",
]

[tool.coverage.paths]
playtest2 = ["src/playtest2", "*/playtest2/src/playtest2"]
tests = ["tests", "*/playtest2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
